create an hello world page (HelloController, hello/world.html.twig); add a link to the homepage

--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -40,5 +40,18 @@
                 </p>
             </div>
         </div>
+
+        <div class="col-sm-6">
+            <div class="jumbotron">
+                <p>
+                    Hello world!
+                </p>
+                <p>
+                    <a class="btn btn-primary btn-lg" href="{{ path('hello_world') }}">
+                        <i class="fa fa-users" aria-hidden="true"></i> Go to /hello
+                    </a>
+                </p>
+            </div>
+        </div>
     </div>
 {% endblock %}
